On hiatus until Wildcraft Herbs & Spices is updated
-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
-- pomace wine no longer crashes

BALANCING: 
- Yogurt can be added to fruit bars in place of gelatin
- Salads and cold pasta allow cured sausage - DONE!!!
- Potent spirits do not cure into themselves anymore - DONE!!!
- Alcohol nutrition nerfed when in meals - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

BUG FIXES:
- Wildcraft strong wine barrels into vinegar at the proper rate - DONE!!!

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Candle recipes updated (waiting on More Candles)
- Food can be put on the ground, I guess?

- New 1.20 clays integrated
- Chef hat + saddle makes Chef Saddle
- Rolling pin tool rack transform fixed; now actually in the rack



1.7.4
- Wildcraft stuff:
-- Nuts working in fruit bread
-- Nuts working in muffins
-- Nuts working in trail mix
-- Nuts can be put into yogurt meals
-- Sumac and Juniper berries are NUTS now, I guess
-- Wildcraft Aged liquids disabled when Expanded Foods is installed 
-- Aged flower wine incorporated into EF
-- Pickled veggie barrel recipes aligned (now requires 1.5 L of vinegar instead of 0.1 L)
-- Updated to use new names for huckleberries, honeysuckle, and pandan
-- Soulstorm slop accepts all poisonous Wildcraft berries

BALANCING:
- Cooked veggies can be added to salad & cold pasta
- Hot pasta can be made with broths
- Cooked pasta can be added to stews
- Candied fruit can be added to yogurt meals
- Nuts can be added to fruit bars
- Peanuts can be added to fruit bread/muffins
- Broth in stew require 0.5 L instead of 1 L; should stop conflicting with soup recipe
- Animal feed breadcrumbs now have 0 grain sat instead of no sat; will now be affected by container perish speed multipliers

BUG FIXES:
- Apple visuals in muffin/fruit dough fixed