@@ -72,8 +72,8 @@
 				"expandedfoods:wilddehydratedfruit-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
 				"expandedfoods:wildcandiedfruit-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
 				"wildcraftfruit:nut-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
-				"game:honeyportion": { "shape": "expandedfoods:shapes/item/food/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "honey" } },
-				"expandedfoods:peanutliquid-paste": { "shape": "expandedfoods:shapes/item/food/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "peanutbutter" } },
+				"game:honeyportion": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "honey" } },
+				"expandedfoods:peanutliquid-paste": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "peanutbutter" } },
 				"expandedfoods:treesyrupportion-birch": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "weaktannin" } },
 				"expandedfoods:treesyrupportion-maple": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "strongtannin" } },
 				"expandedfoods:fruitsyrupportion-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "name": "type", "textureMap": { "syrup": "fill-{type}" } },
@@ -94,8 +94,8 @@
 				"expandedfoods:wilddehydratedfruit-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
 				"expandedfoods:wildcandiedfruit-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
 				"wildcraftfruit:nut-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
-				"game:honeyportion": { "shape": "expandedfoods:shapes/item/food/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "honey" } },
-				"expandedfoods:peanutliquid-paste": { "shape": "expandedfoods:shapes/item/food/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "peanutbutter" } },
+				"game:honeyportion": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "honey" } },
+				"expandedfoods:peanutliquid-paste": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "peanutbutter" } },
 				"expandedfoods:treesyrupportion-birch": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "weaktannin" } },
 				"expandedfoods:treesyrupportion-maple": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "strongtannin" } },
 				"expandedfoods:fruitsyrupportion-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "name": "type", "textureMap": { "syrup": "fill-{type}" } },
@@ -116,8 +116,8 @@
 				"expandedfoods:wilddehydratedfruit-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
 				"expandedfoods:wildcandiedfruit-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
 				"wildcraftfruit:nut-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/fruit/muffin.json", "name": "type", "textureMap": { "fruit": "{type}" } },
-				"game:honeyportion": { "shape": "expandedfoods:shapes/item/food/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "honey" } },
-				"expandedfoods:peanutliquid-paste": { "shape": "expandedfoods:shapes/item/food/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "peanutbutter" } },
+				"game:honeyportion": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "honey" } },
+				"expandedfoods:peanutliquid-paste": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "peanutbutter" } },
 				"expandedfoods:treesyrupportion-birch": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "weaktannin" } },
 				"expandedfoods:treesyrupportion-maple": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "textureMap": { "syrup": "strongtannin" } },
 				"expandedfoods:fruitsyrupportion-*": { "shape": "expandedfoods:shapes/item/food/bread/overlays/syrup/muffin.json", "name": "type", "textureMap": { "syrup": "fill-{type}" } },
