@@ -89,6 +89,7 @@ BALANCING:
 - Salads and cold pasta allow cured sausage - DONE!!!
 - Potent spirits do not cure into themselves anymore - DONE!!!
 - Alcohol nutrition nerfed when in meals - DONE!!!
+- Lard nutrition & healing nerfed; output doubled - DONE!!!
 
 NEW FOOD:
 - added meatloaf?
@@ -97,6 +98,7 @@ NEW FOOD:
 
 BUG FIXES:
 - Wildcraft strong wine barrels into vinegar at the proper rate - DONE!!!
+- Acorn muffins don't crash when topping with honey - DONE!!!
 
 MISC: 
 - Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
